RESOLVED FIXED274243
Crash for uncalled completionHandler.
https://bugs.webkit.org/show_bug.cgi?id=274243
Summary Crash for uncalled completionHandler.
Megan Gardner
Reported 2024-05-15 21:55:56 PDT
Crash for uncalled completionHandler.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-15 21:56:09 PDT
Megan Gardner
Comment 2 2024-05-15 21:58:03 PDT
EWS
Comment 3 2024-05-15 23:13:34 PDT
Committed 278847@main (3aba877b321b): <https://commits.webkit.org/278847@main> Reviewed commits have been landed. Closing PR #28642 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.