Crash for uncalled completionHandler. https://bugs.webkit.org/show_bug.cgi?id=274243 rdar://128176183

Reviewed by Wenson Hsieh.

Call the completion handler for all code paths.

* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::getTextIndicatorForID):
(WebKit::WebPageProxy::updateTextIndicatorStyleVisibilityForID):

Canonical link: https://commits.webkit.org/278847@main